--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mdridha Family Tree</title>
+<title>Mridha Family Tree</title>
 <style>
 body {
   font-family: Arial, sans-serif;
@@ -93,17 +93,24 @@ const familyData = {
       "name": "Akkel Ali Mdridha",
       "children": [
         {"name": "Md. Anes Mridha"},
-        {
-          "name": "Md. Abser Kerani",
+        {"name": "Md. Abser Kerani",
                       "children": [
                       {"name": "Manik",
                                         "children": [
-                                        {"name": "Mobarak Ali"},
-                                        {"name": "Gohur Ali"}]
+                                        {"name": "a"},
+                                        {"name": "b"}]
                                       
                       },
+                      {"name": "2"},
+                      {"name": "3"},
+                      {"name": "4"},
+                      {"name": "5"},
+                      {"name": "6"},
+                      {"name": "7"},
+                      {"name": "8"},
+                      {"name": "9"},
                       {"name": "Lotif"}]                                   
-        },
+                                        },
         {"name": "Md. Afes Mridha"},
         {"name": "Md. Momin Uddin Mridha"},
         {"name": "Md. Hossen Uddin Mridha"},
@@ -146,6 +153,7 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
 
 
 
