--- a/index.html
+++ b/index.html
@@ -17,25 +17,22 @@ h1 {
 }
 
 .tree {
-  overflow-x: auto;
-  padding: 20px 0;
-  border-bottom: 2px solid #333;
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 ul {
   padding-top: 20px;
   position: relative;
-  display: flex;
-  justify-content: center;
-  list-style: none;
-  margin: 0;
+  display: table;
+  margin: 0 auto;
 }
 
 li {
+  display: table-cell;
   text-align: center;
   vertical-align: top;
-  margin: 0 10px;
+  padding: 20px 5px 0 5px;
   position: relative;
 }
 
@@ -43,16 +40,21 @@ li::before, li::after {
   content: '';
   position: absolute;
   top: 0;
+  right: 50%;
+  border-top: 2px solid #333;
   width: 50%;
-  height: 2px;
-  background: #333;
+  height: 20px;
 }
 
-li::before { right: 50%; border-top: 2px solid #333; }
-li::after { left: 50%; border-top: 2px solid #333; }
+li::after {
+  right: auto;
+  left: 50%;
+  border-left: 2px solid #333;
+}
 
-li:only-child::before,
-li:only-child::after { display: none; }
+li:only-child::before, li:only-child::after {
+  display: none;
+}
 
 li div {
   display: inline-block;
@@ -74,14 +76,6 @@ ul ul::before {
   border-left: 2px solid #333;
   height: 20px;
 }
-
-#allNames {
-  margin-top: 20px;
-  background: #fff;
-  padding: 15px;
-  border: 2px solid #4CAF50;
-  border-radius: 8px;
-}
 </style>
 </head>
 <body>
@@ -90,10 +84,8 @@ ul ul::before {
 
 <div class="tree" id="familyTree"></div>
 
-<h2>All Family Members:</h2>
-<div id="allNames"></div>
-
 <script>
+// Corrected family data
 const familyData = {
   "name": "Babar Ali Haolader",
   "children": [
@@ -101,27 +93,24 @@ const familyData = {
       "name": "Akkel Ali Mdridha",
       "children": [
         {"name": "Md. Anes Mridha"},
-        {
-          "name": "Md. Abser Kerani",
-          "children": [
-            {
-              "name": "Manik",
-              "children": [
-                {"name": "a"},
-                {"name": "b"}
-              ]
-            },
-            {"name": "2"},
-            {"name": "3"},
-            {"name": "4"},
-            {"name": "5"},
-            {"name": "6"},
-            {"name": "7"},
-            {"name": "8"},
-            {"name": "9"},
-            {"name": "Lotif"}
-          ]
-        },
+        {"name": "Md. Abser Kerani",
+                      "children": [
+                      {"name": "Manik",
+                                        "children": [
+                                        {"name": "a"},
+                                        {"name": "b"}]
+                                      
+                      },
+                      {"name": "2"},
+                      {"name": "3"},
+                      {"name": "4"},
+                      {"name": "5"},
+                      {"name": "6"},
+                      {"name": "7"},
+                      {"name": "8"},
+                      {"name": "9"},
+                      {"name": "Lotif"}]                                   
+                                        },
         {"name": "Md. Afes Mridha"},
         {"name": "Md. Momin Uddin Mridha"},
         {"name": "Md. Hossen Uddin Mridha"},
@@ -141,40 +130,32 @@ const familyData = {
   ]
 };
 
-// Function to create the tree
+const treeContainer = document.getElementById('familyTree');
+
 function createTree(member) {
   const li = document.createElement('li');
   li.innerHTML = `<div>${member.name}</div>`;
 
   if (member.children && member.children.length > 0) {
     const ul = document.createElement('ul');
-    member.children.forEach(child => ul.appendChild(createTree(child)));
+    member.children.forEach(child => {
+      ul.appendChild(createTree(child));
+    });
     li.appendChild(ul);
   }
   return li;
 }
 
-// Render tree
-const treeContainer = document.getElementById('familyTree');
 const ulRoot = document.createElement('ul');
 ulRoot.appendChild(createTree(familyData));
 treeContainer.appendChild(ulRoot);
-
-// Function to list all names
-function listAllNames(member, list = []) {
-  list.push(member.name);
-  if (member.children) {
-    member.children.forEach(child => listAllNames(child, list));
-  }
-  return list;
-}
-
-// Render all names
-const allNamesContainer = document.getElementById('allNames');
-const allNames = listAllNames(familyData);
-allNamesContainer.innerHTML = '<ul>' + allNames.map(name => `<li>${name}</li>`).join('') + '</ul>';
-
 </script>
 
 </body>
 </html>
+
+
+
+
+
+
