--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ h1 {
   position: relative;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
   list-style-type: none;
 }
 
@@ -29,15 +28,17 @@ h1 {
   text-align: center;
   position: relative;
   padding: 20px 5px 0 5px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .tree li::before, .tree li::after {
   content: '';
   position: absolute;
   top: 0;
-  border-top: 2px solid #333;
   width: 50%;
   height: 20px;
+  border-top: 2px solid #333;
 }
 
 .tree li::before {
@@ -59,88 +60,4 @@ h1 {
   padding: 10px 20px;
   border: 2px solid #4CAF50;
   border-radius: 8px;
-  background: #fff;
-  font-weight: bold;
-  color: #333;
-  position: relative;
-  z-index: 1;
-  white-space: nowrap;
-}
-
-.tree ul::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 50%;
-  border-left: 2px solid #333;
-  height: 20px;
-}
-</style>
-</head>
-<body>
-
-<h1>Mridha Family Tree</h1>
-
-<div class="tree" id="familyTree"></div>
-
-<script>
-const familyData = {
-  "name": "Babar Ali Haolader",
-  "children": [
-    {
-      "name": "Akkel Ali Mridha",
-      "children": [
-        {"name": "Md. Anes Mridha"},
-        {"name": "Md. Abser Kerani",
-          "children": [
-            {"name": "Manik",
-              "children": [
-                {"name": "a"},
-                {"name": "b"}
-              ]
-            },
-            {"name": "2"}, {"name": "3"}, {"name": "4"}, {"name": "5"},
-            {"name": "6"}, {"name": "7"}, {"name": "8"}, {"name": "9"},
-            {"name": "Lotif"}
-          ]
-        },
-        {"name": "Md. Afes Mridha"},
-        {"name": "Md. Momin Uddin Mridha"},
-        {"name": "Md. Hossen Uddin Mridha"},
-        {"name": "Md. Asmot Ali Mridha"},
-        {"name": "Mst. Amena"},
-        {"name": "Dont Know"},
-        {"name": "Dont Know"}
-      ]
-    },
-    {
-      "name": "Akram Ali Mridha",
-      "children": [
-        {"name": "Mobarak Ali"},
-        {"name": "Gohur Ali"}
-      ]
-    }
-  ]
-};
-
-const treeContainer = document.getElementById('familyTree');
-
-function createTree(member) {
-  const li = document.createElement('li');
-  li.innerHTML = `<div>${member.name}</div>`;
-
-  if (member.children && member.children.length > 0) {
-    const ul = document.createElement('ul');
-    member.children.forEach(child => ul.appendChild(createTree(child)));
-    li.appendChild(ul);
-  }
-  return li;
-}
-
-const ulRoot = document.createElement('ul');
-ulRoot.appendChild(createTree(familyData));
-treeContainer.appendChild(ulRoot);
-</script>
-
-</body>
-</html>
+  backgroun
