--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mridha Family Row</title>
+<title>Mridha Family List</title>
 <style>
 body {
   font-family: Arial, sans-serif;
   background: #f0f2f5;
   padding: 20px;
 }
-
-h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
+h1 { text-align: center; margin-bottom: 20px; }
 .row {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
-
 .member {
   padding: 8px 15px;
   border: 2px solid #4CAF50;
@@ -35,7 +29,6 @@ h1 {
 <body>
 
 <h1>Mridha Family Row</h1>
-
 <div class="row" id="familyRow"></div>
 
 <script>
@@ -57,3 +50,42 @@ const familyData = {
             {"name": "2"}, {"name": "3"}, {"name": "4"}, {"name": "5"},
             {"name": "6"}, {"name": "7"}, {"name": "8"}, {"name": "9"},
             {"name": "Lotif"}
+          ]
+        },
+        {"name": "Md. Afes Mridha"},
+        {"name": "Md. Momin Uddin Mridha"},
+        {"name": "Md. Hossen Uddin Mridha"},
+        {"name": "Md. Asmot Ali Mridha"},
+        {"name": "Mst. Amena"},
+        {"name": "Dont Know"},
+        {"name": "Dont Know"}
+      ]
+    },
+    {
+      "name": "Akram Ali Mridha",
+      "children": [
+        {"name": "Mobarak Ali"},
+        {"name": "Gohur Ali"}
+      ]
+    }
+  ]
+};
+
+const container = document.getElementById('familyRow');
+
+function listFamily(member) {
+  const div = document.createElement('div');
+  div.className = 'member';
+  div.textContent = member.name;
+  container.appendChild(div);
+
+  if (member.children) {
+    member.children.forEach(child => listFamily(child));
+  }
+}
+
+listFamily(familyData);
+</script>
+
+</body>
+</html>
